workload-monitoring-for-user-defined-projects/deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: null
  labels:
    app: nginxapp
    app.kubernetes.io/component: nginxapp
    app.kubernetes.io/instance: nginxapp
    app.kubernetes.io/part-of: nginxapp
    app.openshift.io/runtime: openshift
  name: nginxapp
  namespace: user-monitoring
spec:
  progressDeadlineSeconds: 30
  replicas: 1
  selector:
    matchLabels:
      app: nginxapp
  template:
    metadata:
      labels:
        app: nginxapp
    spec:
      containers:
      - image: quay.io/openshift-examples/web:main
        name: web
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /
            port: 8080
      - args:
        - -nginx.scrape-uri=http://localhost:8081/
        image: docker.io/nginx/nginx-prometheus-exporter:latest
        name: nginx-prometheus-exporter
        ports:
        - containerPort: 9113
          name: metrics
        readinessProbe:
          httpGet:
            path: /
            port: 9113
