workload-monitoring-for-user-defined-projects/deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginxapp
  name: nginxapp
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: metrics
    port: 9113
    protocol: TCP
    targetPort: 9113
  selector:
    app: nginxapp
  type: ClusterIP
status:
  loadBalancer: {}
