workload-monitoring-for-user-defined-projects/deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nginxapp
  name: nginxapp
  namespace: user-monitoring
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: nginxapp
    weight: 100
  wildcardPolicy: None
